--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,13 @@ pom.xml.asc
 
 
 #!! ERROR:  is undefined. Use list command to see defined gitignore types !!#
+# Created by https://www.gitignore.io
+
+### Vim ###
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+*.un~
+Session.vim
+.netrwhist
+*~
+
